--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -35,13 +35,16 @@
 			<a class="bottom" href="#bottom"><span></span></a>
 		</li> -->
 		<li>
-			<a id="undo-btn">Undo</a>
+			<a class="save-btn" id="save-btn"><span></span></a>
 		</li>
 		<li>
-			<a id="redo-btn">Redo</a>
+			<div><span id="info"></span></div>
 		</li>
 		<li>
-			<a id="save-btn"><span></span></a>
+			<a class="undo-btn" id="undo-btn"><span></span></a>
+		</li>
+		<li>
+			<a class="redo-btn" id="redo-btn"><span></span></a>
 		</li>
 		<!-- <li>
 			<a id="restore-btn">Restore</a>
