--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -28,14 +28,14 @@
 </div>
 <div id="nav">
 	<ul>
-		<!-- <li>
-			<a class="top" href="#top"><span></span></a>
-		</li>
-		<li>
-			<a class="bottom" href="#bottom"><span></span></a>
-		</li> -->
 		<li>
 			<a class="save-btn" id="save-btn"><span></span></a>
+		</li>
+		<li>
+			<a class="top" id="mark-btn"><span>Mark</span></a>
+		</li>
+		<li>
+			<a class="bottom" id="outline-btn"><span>Outline</span></a>
 		</li>
 		<li>
 			<div><span id="info"></span></div>
