--- a/app/assets/stylesheets/document.css.scss
+++ b/app/assets/stylesheets/document.css.scss
@@ -1,30 +1,18 @@
 $markup-color : #f986c1;
 $outline-color: #f986c1;
 
-#doc{
-  // div.markup{
-  //   background-color : rgba($markup-color,0.3);
-  // }
+.dropHover { border:1px dotted red; }
+.dragActive { border:2px dotted orange; }
 
+#doc{
   span.markup{
     background-color : rgba(#aef26d,0.6);
   }
-
-  // div.markup-hover{
-  //   background-color : rgba($markup-color,0.6) !important;
-  //   z-index: 2;
-  // }
 
   span.markup-hover{
     background-color : rgba(#aef26d,0.6) !important;
     z-index: 2;
   }
-
-  // div.markup-selected{
-  //   background-color : $markup-color !important;
-  //   z-index: 1;
-  // }
-
   span.markup-selected{
     background-color : #aef26d !important;
     z-index: 1;
@@ -246,7 +234,20 @@ $outline-color: #f986c1;
  }
 }
 
-div.outline{
+.outline{
+  opacity: 0.4;
+}
+
+.outline-hover{
+  opacity: 1;
+}
+
+.outline-target-hover{
+  opacity: 1;
+  z-index: 5;
+}
+
+#comments > div.outline{
   display: table;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -255,15 +256,6 @@ div.outline{
   padding-top: 1px;
   padding-bottom: 3px;
   padding-right: 3px;
-  opacity: 0.3;
-  &.markup-hover{
-   opacity: 0.6;
-   z-index: 2;
-  }
-  &.markup-selected{
-   opacity: 1;
-   z-index: 1;
-  }
 }
 
 .close-button{
